# DIA

./: .gitignore  CMakeLists.txt  README.md
config/: default.yaml
dvo/: README.md  dvo_work  sequenceSettings.yaml
dvo/cameras/: ardea.yaml  freiburg1.yaml  freiburg2.yaml  freiburg2_ROS.yaml  freiburg3.yaml  nuim.yaml
dvo/direct_odometry/: CMakeLists.txt  main.cpp  systemSettings.yaml  test_functions.cpp  test_functions.h
dvo/direct_odometry/classes/: backEnd.cpp  backEnd.h  camPinhole.cpp  camPinholeDist.cpp  camera.cpp  camera.h  dvo.cpp  dvo.h  extractHGP.cpp  frame.cpp  frame.h  trackingFrontEnd.cpp  trackingFrontEnd.h  tracking_functions.cpp
dvo/direct_odometry/cmake_modules/: FindG2O.cmake
dvo/direct_odometry/logMatlab/: entropy_analisys.m  plot_trajectory.m
dvo/direct_odometry/utils/: SequenceSettings.cpp  SequenceSettings.h  SystemSettings.cpp  SystemSettings.h  common_functions.cpp  common_functions.h  data_structures.h  definesAndIncludes.h  optimizer.cpp  optimizer.h
dvo/logs/: gtLog.txt  gtLog_g2o.txt  gtLog_naive.txt
include/myslam/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  pyrframes.h  visual_odometry.h
src/: CMakeLists.txt  camera.cpp  frame.cpp  g2o_types.cpp  pyrframes.cpp  visual_odometry.cpp
test/: run_vo.cpp
